# DjangoSite

./: pyproject.toml
django_site/: migrate_data.py
django_site/django_site/: settings.py  urls.py
django_site/quotes/: admin.py  forms.py  models.py  urls.py  views.py
django_site/quotes/management/commands/: transform_data.py
django_site/quotes/migrations/: 0001_initial.py  0002_alter_author_id.py  0003_rename_id_author_i_d.py  0004_rename_i_d_author_id.py  0005_alter_quote_id.py  0006_alter_quote_id.py  0007_testquote.py  0008_tag_remove_quote_tags_quote_tags.py  0009_remove_quote_tags_delete_tag.py  0010_tag_quote_tags.py  0011_delete_testquote.py  0012_alter_tag_name.py
django_site/quotes/templates/quotes/: author.html  author_detail.html  base.html  main.html  quote.html  quote_detail.html  quotes_by_tag.html
django_site/users/: forms.py  views.py
django_site/users/templates/users/: signup.html
